...
                autovalidateMode: AutovalidateMode.always,
                child: Padding(
                  padding: EdgeInsetsDirectional.fromSTEB(0.0, 80.0, 0.0, 0.0),
                  child: Container(
                    width: 300.0,
                    child: TextFormField(
                      key: ValueKey('TextField_s8in'),
                      controller: _model.textController,
                      focusNode: _model.textFieldFocusNode,
                      onChanged: (_) => EasyDebounce.debounce(
                        '_model.textController',
                        Duration(milliseconds: 2000),
                        () => safeSetState(() {}),
...
                  ),
                ),
              ),
              Padding(
                padding: EdgeInsetsDirectional.fromSTEB(0.0, 50.0, 0.0, 0.0),
                child: FFButtonWidget(
                  key: ValueKey('Button_hob0'),
                  onPressed: () async {
                    logFirebaseEvent('ON_BOARDING_PAGE_NEXT_BTN_ON_TAP');
                    logFirebaseEvent('Button_validate_form');
                    _model.name = true;
                    if (_model.formKey.currentState == null ||
                        !_model.formKey.currentState!.validate()) {
...
